--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -450,6 +450,15 @@ section {
   background: #fff;
   border: 2px solid #1f5297;
 }
+.resume .buttom {
+  right: 15px;
+  bottom: 15px;
+  text-color: white;
+  background: #149ddd;
+  width: 40px;
+  border-radius: 20px;
+  transition: all 0.4s;
+}
 
 /*--------------------------------------------------------------
 # Portfolio
